# serializer version: 1
# name: test_cbn_advies_pipeline_snapshot
  '''
  ---
  tags: ["TEST", "snapshot"]
  itaa-lex-sectie: ""
  wet: "CBN-advies snapshot-fixture"
  bron_rol: "interpretatief"
  status: "beschikbaar"
  bijgewerkt: "01.01.2026"
  bron: "onbekend"
  chunk:
    level: 2
    type: "Art."
    sub_strategy: null
  ---
  
  # CBN-advies snapshot-fixture
  
  *Bijgewerkt tot en met 01.01.2026 — gecoördineerde versie.*
  
  # CBN-advies 2024/01 — Voorraadwaardering bij landbouwbedrijven
  
  Dit advies behandelt de waardering van voorraden in landbouwbedrijven volgens artikel 3:7 van het Wetboek van Vennootschappen en Verenigingen. De waardering volgt het principe van laagste-van-aanschaffingswaarde-of-marktwaarde[1].
  
  ## Toepassingsgebied
  Dit advies is van toepassing op alle landbouwbedrijven die een dubbele boekhouding voeren. Het geldt zowel voor land- als tuinbouwactiviteiten.
  
  Kreditinstellingen die landbouwleningen beheren vallen niet onder dit advies — dat is een source-typo om de protect_source_typos transformer te testen (echte CBN-tekst bevat soms OCR-fouten zoals deze, die moeten behouden blijven).
  
  ## Waarderingsregels
  De voorraad wordt gewaardeerd tegen aanschaffingsprijs, tenzij de marktwaarde op balansdatum lager ligt. In dat geval wordt een waardevermindering geboekt.
  
  De aanschaffingswaarde omvat alle directe en indirecte productiekosten tot aan het moment dat het product gereed is voor verkoop.
  
  ## Conclusie
  De waardering moet jaarlijks herzien worden bij elke balansdatum[2].
  
  ---
  
  1. Zie ook CBN-advies 2018/03 voor algemene voorraadwaarderingsprincipes. ↩ 
  2. Artikel 3:6 KB WVV 2019. ↩
  
  '''
# ---
# name: test_justel_html_pipeline_snapshot
  '''
  ---
  tags: ["TEST", "snapshot"]
  itaa-lex-sectie: "TEST"
  wet: "Test-wet voor justel-snapshot"
  bron_rol: "itaa_lex"
  status: "beschikbaar"
  bijgewerkt: "01.01.2026"
  bron: "www.ejustice.just.fgov.be (Justel, gecoördineerde versie)"
  chunk:
    level: 4
    type: "Art."
    sub_strategy: null
  ---
  
  # Test-wet voor justel-snapshot
  
  *Bijgewerkt tot en met 01.01.2026 — gecoördineerde versie.*
  
  ## HOOFDSTUK I. — Algemene bepalingen
  
  ### Afdeling 1. — Definities
  
  #### Art. 1
  
  Voor de toepassing van deze wet wordt verstaan onder belastingplichtige de natuurlijke of rechtspersoon die belastbaar is in het Rijk.
  
  #### Art. 2
  
  Deze wet treedt in werking op de eerste dag van de maand na publicatie in het Belgisch Staatsblad.
  
  ## HOOFDSTUK II. — Toepassing
  
  #### Art. 3
  
  De Koning kan bij in Ministerraad overlegd besluit nadere uitvoeringsregels bepalen.
  '''
# ---
# name: test_pipeline_output_snapshot[ejustice_basic]
  '''
  ---
  tags: ["TEST", "snapshot"]
  itaa-lex-sectie: "TEST"
  wet: "Test-wet voor snapshot-baseline (pdftotext_ejustice)"
  bron_rol: "itaa_lex"
  status: "beschikbaar"
  bijgewerkt: "01.01.2026"
  bron: "ejustice.just.fgov.be (gecoördineerde versie)"
  chunk:
    level: 4
    type: "Art."
    sub_strategy: null
  ---
  
  # Test-wet voor snapshot-baseline (pdftotext_ejustice)
  
  *Bijgewerkt tot en met 01.01.2026 — gecoördineerde versie.*
  
  ## HOOFDSTUK 1. - Algemene bepalingen
  
  ### AFDELING 1. - Definities
  
  #### Art. 1. Voor de toepassing van deze testwet wordt verstaan onder accountant de persoon die ingeschreven is in het openbaar register van het Instituut.
  
  #### Art. 2. Deze wet is van toepassing op alle natuurlijke personen.
  
  ### AFDELING 2. - Toepassingsgebied
  
  #### Art. 3. De wet treedt in werking op 1 januari 2026.
  
  '''
# ---
# name: test_pipeline_output_snapshot[wetboek_minimal]
  '''
  ---
  tags: ["TEST", "snapshot"]
  itaa-lex-sectie: "TEST"
  wet: "Test-wet voor snapshot-baseline (custom_wetboek)"
  bron_rol: "itaa_lex"
  status: "beschikbaar"
  bijgewerkt: "01.01.2026"
  bron: "Fisconetplus.be (officieuze gecoördineerde versie)"
  chunk:
    level: 5
    type: "Art."
    sub_strategy: null
  ---
  
  # Test-wet voor snapshot-baseline (custom_wetboek)
  
  *Bijgewerkt tot en met 01.01.2026 — gecoördineerde versie.*
  
  ## BOEK I. - Inleidende bepalingen
  
  ### TITEL I. - Definities
  
  #### HOOFDSTUK 1. - Algemeen
  
  ##### Art. 1:1.  In dit wetboek wordt verstaan onder vennootschap een rechtspersoon.
  
  ##### Art. 1:2.  Een vennootschap heeft een eigen vermogen.
  
  #### HOOFDSTUK 2. - Rechtsvorm
  
  ##### Art. 1:3.  De keuze van de rechtsvorm gebeurt bij oprichting.
  
  '''
# ---
# name: test_pipeline_output_snapshot[wib92_minimal]
  '''
  ---
  tags: ["TEST", "snapshot"]
  itaa-lex-sectie: "TEST"
  wet: "Test-wet voor snapshot-baseline (custom_wib92)"
  bron_rol: "itaa_lex"
  status: "beschikbaar"
  bijgewerkt: "01.01.2026"
  bron: "Fisconet (officieuze gecoördineerde versie)"
  chunk:
    level: 5
    type: "Art."
    sub_strategy: null
  ---
  
  # Test-wet voor snapshot-baseline (custom_wib92)
  
  *Bijgewerkt tot en met 01.01.2026 — gecoördineerde versie.*
  
  ## TITEL I. - Inkomstenbelastingen
  
  ### HOOFDSTUK I. - Vestiging van de belasting
  
  #### AFDELING I. - Personenbelasting
  
  ##### Art. 1.  De personenbelasting wordt geheven op het wereldwijde inkomen.
  
  ##### Art. 2.  Belastingplichtig zijn de natuurlijke personen.
  
  '''
# ---
